--- a/escritos-volumen-2/updated/14-capitulo-14.adoc
+++ b/escritos-volumen-2/updated/14-capitulo-14.adoc
@@ -1,7 +1,9 @@
-== Capítulo 14 La Semilla del Reino
+== Capítulo 14. La Semilla del Reino
 
+[.discourse-part]
 Pregunta: ¿Qué es la Semilla?
 
+[.discourse-part]
 Respuesta: La Semilla de Dios es la palabra de Dios;
 la Semilla del reino es la palabra del reino.
 Es una medida de la luz y vida, de la gracia y verdad que son de Jesucristo,
@@ -16,8 +18,10 @@ vivificaciones y resplandores puros de él), es la Semilla,
 la cual es gratuitamente concedida al hombre para que brote y permanezca en él,
 y lo saque de sí mismo y lo lleve a Ella.
 
+[.discourse-part]
 Pregunta: ¿Quién es el sembrador de esta Semilla?
 
+[.discourse-part]
 Respuesta: Dios, en y a través de Cristo.
 Él es el buen jardinero.
 Él, por medio de la palabra que creó todo en el principio, crea de nuevo en Cristo Jesús,
@@ -27,8 +31,10 @@ a través del cual lo renueva.
 Ahora, estos que son renovados por Él de esta manera, son "`hechura suya,
 creados en Cristo Jesús para buenas obras.`"
 
+[.discourse-part]
 Pregunta: ¿Dónde se encuentra esta Semilla?
 
+[.discourse-part]
 Respuesta: Se encuentra donde Dios la siembra, esto es, en la tierra interna.
 Esta es una Semilla interna y es sembrada en el terreno o tierra interna, es decir,
 en los corazones de los hombres.
@@ -37,8 +43,10 @@ agitando y vivificando secretamente a los que estaban muertos en delitos y pecad
 Ahí la voz y el llamado de la palabra son oídos, llamando de la injusticia y del pecado,
 a la justicia y santidad.
 
+[.discourse-part]
 Pregunta: ¿En qué tipo de terreno es sembrada esta Semilla celestial?
 
+[.discourse-part]
 Respuesta: En todo tipo: En terreno junto al camino, en terreno pedregoso,
 en terreno espinoso y en buen terreno.
 Los relámpagos de Dios en el interior iluminan todo el mundo interior,
@@ -50,8 +58,10 @@ sino que cada vez que brilla en el corazón,
 da verdadera luz ahí. Cada vez que testifica ahí, testifica la verdad para Dios,
 testifica contra el hombre, y la corrupción y cauterización de su corazón y consciencia.
 
+[.discourse-part]
 Pregunta: ¿En qué tipo de terreno produce buen fruto?
 
+[.discourse-part]
 Respuesta: Sólo en el buen terreno.
 Esta Semilla produce algo de fruto en otros terrenos, y el fruto que produce es bueno.
 Las convicciones son buenas, los deseos engendrados ahí por Ella y que surgen de Ella,
@@ -64,10 +74,12 @@ Pero el buen terreno le cede todo su alimento a la buena
 Semilla (y no le dará alimento a ninguna mala Semilla),
 para que la buena Semilla no sólo brote, sino que lleve fruto.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede ser hecho bueno el terreno que es malo?
 ¿No fue una vez malo el terreno que ahora es bueno?
 ¿Acaso no puede ser hecho bueno el terreno que ahora es malo?
 
+[.discourse-part]
 Respuesta: Dios ha encerrado a todos los hombres en incredulidad,
 para poder tener misericordia de todos.
 En realidad, el corazón que ahora es suave una vez fue duro.
@@ -90,15 +102,17 @@ la consideraré bajo los siguientes tres subtítulos:
 I+++.+++ Qué está envuelto o escondido en esta Semilla, II. La naturaleza de la Semilla, III.
 Los efectos de la Semilla.
 
-I+++.+++ ¿Qué está envuelto o escondido en esta preciosa Semilla celestial?
+[.alt]
+==== I. ¿Qué está envuelto o escondido en esta preciosa Semilla celestial?
 
 En realidad, hay tanto envuelto en Ella, que el corazón del hombre no lo puede concebir,
 y mucho menos, expresar la lengua.
 Sin embargo,
 he sentido algo y está en mi corazón responder a esto bajo los siguientes encabezados.
 
-En primer lugar, la gloria del reino de los cielos,
-la gloria del reino eterno está escondida y envuelta aquí, en la Semilla.
+[.discourse-part]
+__En primer lugar, la gloria del reino de los cielos,
+la gloria del reino eterno está escondida y envuelta aquí, en la Semilla.__
 De cualquier manera que aparezca, reine y brille Cristo, lo hace en esta Semilla.
 ¡Oh,
 el brote y la manifestación de esta Semilla es ciertamente glorioso
@@ -118,8 +132,9 @@ el cuerno del ungido de Dios, el cetro justo y apacible del Salvador,
 son experimentados y exaltados en esta Semilla,
 en la medida que brota y se propaga en el exterior, en la vida y virtud del Padre.
 
-En segundo lugar,
-la naturaleza divina de Dios Todopoderoso está escondida y envuelta en esta Semilla.
+[.discourse-part]
+__En segundo lugar,
+la naturaleza divina de Dios Todopoderoso está escondida y envuelta en esta Semilla.__
 Es la Semilla de Dios y la naturaleza misma de Dios.
 Por tanto, aquel en quien Ella brota, que está recogido en Ella,
 que ha nacido de Ella y ha sido hecho uno con Ella, participa de la naturaleza divina.
@@ -134,8 +149,9 @@ Ahora, nada de esto puede ocurrir excepto por la gracia, por la verdad, por la l
 Espíritu y poder que Él siembra en el corazón, estas no son muchas cosas,
 sino la única Semilla en donde están contenidas e incluidas todas ellas.
 
-En tercer lugar, el nuevo pacto, o sea,
-el acuerdo santo del alma con Dios en Cristo Jesús, está en esta Semilla.
+[.discourse-part]
+__En tercer lugar, el nuevo pacto, o sea,
+el acuerdo santo del alma con Dios en Cristo Jesús, está en esta Semilla.__
 En Ella está el pacto que Dios hace con el nuevo Israel.
 Por medio de este pacto hace que el corazón sea nuevo y escribe Su ley en él;
 quita el corazón de piedra y sana todas sus rebeliones; los ama gratuitamente,
@@ -165,9 +181,10 @@ Las ovejas que son recogidas y vienen aquí,
 han regresado al Obispo y Pastor de sus almas,
 Al que las vigila y las preserva poderosamente para que no se descarríen más.
 
-En cuarto lugar,
+[.discourse-part]
+__En cuarto lugar,
 todas las gracias y virtudes del Santo Espíritu de Dios
-están escondidas y envueltas en esta única Semilla.
+están escondidas y envueltas en esta única Semilla.__
 No hay nada que Dios requiera del alma, ni nada que el alma pueda desear de Dios,
 sino lo que está escondido y envuelto en esta Semilla.
 Todo lo que es necesario, o todo lo que puede ser deseado,
@@ -178,12 +195,16 @@ su querer y su hacer para unirse a Dios,
 y la unión que hace Dios con el alma en esta Semilla, y Su vida,
 Su querer y Su hacer que se experimentan en el brote de vida de esta Semilla!
 
+[.small-break]
+'''
+
 Ahora,
 para hacer esto un poquito más claro y evidente para los corazones de
 aquellos que desean el verdadero entendimiento de estas gracias y virtudes,
 les daré algunos detalles bajo este cuarto encabezado.
 
-Primero: El conocimiento puro, vivo y celestial del Padre y de Su Hijo, Cristo Jesús,
+[.discourse-part]
+_Primero:_ El conocimiento puro, vivo y celestial del Padre y de Su Hijo, Cristo Jesús,
 está envuelto en esta Semilla.
 Dios es luz, y esta Semilla que viene de Él, no es tinieblas, sino luz;
 y en la luz que brota de esta Semilla, Dios y Cristo son revelados.
@@ -201,7 +222,8 @@ Cristo es formado en él. Y en la medida que él es
 formado y creado nuevamente en la Semilla,
 es hechura de Dios, formado y nuevamente creado en Cristo.
 
-Segundo: La fe, la fe verdadera, la fe viva, efectiva,
+[.discourse-part]
+_Segundo:_ La fe, la fe verdadera, la fe viva, efectiva,
 salvadora y conquistadora que da victoria sobre el mundo,
 y sobre el diablo y sus tentaciones, está contenida o envuelta en esta Semilla.
 La fe es el precioso don de Dios que no se encuentra en la naturaleza del hombre,
@@ -225,7 +247,8 @@ por la Palabra de Dios que vive y permanece para siempre.
 preservando e incrementando la fe ahí (según es experimentada diariamente),
 es llamada "`la palabra de fe`" (Romanos 10:8).
 
-Tercero: El temor puro, el temor santo, el temor celestial,
+[.discourse-part]
+_Tercero:_ El temor puro, el temor santo, el temor celestial,
 el cual es de una naturaleza limpia y celestial, y perdura para siempre,
 también está en esta Semilla.
 Este inocente temor es una promesa del nuevo pacto,
@@ -233,7 +256,8 @@ y es dado a los hijos del nuevo pacto,
 el cual Dios pone en sus corazones desde la Semilla de vida que brota en ellos,
 para que no se aparten del Señor. (Jeremías 32:40)
 
-Cuarto: El amor puro y divino está en ella.
+[.discourse-part]
+_Cuarto:_ El amor puro y divino está en ella.
 En la medida que esta Semilla brota, en esa misma medida brota el amor de Dios.
 Así como Dios es amor, la Semilla que es de Él participa de Su amor.
 No hay enemistad en ella, y ninguna enemistad u oposición brotarán de ella.
@@ -255,7 +279,8 @@ amar a los enemigos, incluso a los más grandes agraviadores,
 maldecidores y perseguidores.
 (Mateo 5:44)
 
-Quinto: La esperanza pura, la esperanza del recto, la esperanza que no avergüenza,
+[.discourse-part]
+_Quinto:_ La esperanza pura, la esperanza del recto, la esperanza que no avergüenza,
 la esperanza que penetra detrás del velo y es una ancla segura y firme ahí,
 (al anclar la mente en el Señor, quien la mantiene en perfecta paz),
 está contenida en la Semilla y brota de ella.
@@ -275,7 +300,8 @@ por medio de lo cual Él derriba la carne.
 Esta esperanza asegura la mente en cada tentación, en cada angustia, en cada prueba,
 en todo viento, tormenta y olas de persecución con las que pueda ser asaltada.
 
-Sexto: La verdadera paciencia y su obra perfecta (Santiago 1:4),
+[.discourse-part]
+_Sexto:_ La verdadera paciencia y su obra perfecta (Santiago 1:4),
 está contenida en esta Semilla y es dada con ella.
 Así como Dios es paciente y tardo para la ira, así también es esta Semilla.
 El hombre es de la naturaleza frágil, inquieta e impaciente,
@@ -286,22 +312,26 @@ El que permanece en la Semilla,
 y siente que la Semilla permanece y Su naturaleza prevalece en él,
 no puede ser impaciente, sin importar lo que el Señor permita que le suceda.
 
-Séptimo: Aquí la verdadera pobreza de espíritu es experimentada.
+[.discourse-part]
+_Séptimo:_ Aquí la verdadera pobreza de espíritu es experimentada.
 Es pobre verdaderamente, el que lo ha vendido todo y no se ha dejado nada,
 excepto a esta Semilla y la aparición y ayuda de Dios en esta Semilla;
 lo cual tampoco está en sus propias manos, sino en la voluntad y disposición de Dios.
 
-Octavo: Aquí es experimentada la verdadera misericordia hacia otros.
+[.discourse-part]
+_Octavo:_ Aquí es experimentada la verdadera misericordia hacia otros.
 Porque el que es llevado a la Semilla vive sólo por misericordia,
 y el que vive por misericordia y es diariamente lo que es por misericordia,
 no puede evitar ser misericordioso con otros.
 
-Noveno: La verdadera hambre y sed de justicia brotan de esta Semilla.
+[.discourse-part]
+_Noveno:_ La verdadera hambre y sed de justicia brotan de esta Semilla.
 La Semilla de Dios, el nacimiento de Dios,
 es lo que discierne la excelencia de Su justicia,
 y lo que tiene hambre y sed de Su justicia.
 
-Décimo: Para no nombrar más, la cruz que hace morir y crucifica al mundo y al pecado,
+[.discourse-part]
+_Décimo:_ Para no nombrar más, la cruz que hace morir y crucifica al mundo y al pecado,
 sólo puede ser tomada en esta Semilla o por virtud de la Semilla.
 En realidad, la Semilla es una cruz, sí, es enemistad contra la naturaleza,
 espíritu y curso de la serpiente.
@@ -313,15 +343,17 @@ la cruz de nuestro Señor Jesucristo es experimentada
 obrando poderosamente contra el pecado,
 crucificando y sometiendo efectivamente todo el curso de la naturaleza maligna y pecaminosa.
 
-II. ¿Qué es la naturaleza de la Semilla de Dios,
-o la Semilla del reino?
+[.alt]
+==== II. ¿Qué es la naturaleza de la Semilla de Dios, o la Semilla del reino?
 
+[.discourse-part]
 Respuesta:
 Aunque la naturaleza de Esta ya ha sido ampliamente explicada bajo los encabezados previos,
 hablaré un poco más específicamente de Ella con varios detalles,
 de acuerdo con las Escrituras.
 
-En primer lugar, es de una naturaleza inmortal e incorruptible.
+[.discourse-part]
+__En primer lugar, es de una naturaleza inmortal e incorruptible.__
 (1 Pedro 1:23) Es una Semilla que en sí misma no puede morir,
 aunque parezca muerta en el hombre o para el hombre,
 al no poder exponer nada de Su vida o virtud escondida en el hombre,
@@ -331,7 +363,8 @@ todavía está muerto en delitos y pecados,
 y no podrá vivir hasta que Dios respire y vivifique esta Semilla en él,
 y lo resucite por medio de la Semilla.
 
-En segundo lugar, es de una naturaleza que recoge.
+[.discourse-part]
+__En segundo lugar, es de una naturaleza que recoge.__
 Ella tiene la naturaleza de una red.
 (Mateo 13:47) Saca de lo que es contrario a Dios, para reunirlo en Dios.
 Saca del mundo, del mar de maldad, del reino de las tinieblas,
@@ -339,7 +372,8 @@ de la propia naturaleza y espíritu del hombre,
 para reunirlo en la naturaleza y Espíritu de Dios, y en Su luz y reino,
 en donde el alma debe morar, caminar y estar sujeta a Dios.
 
-En tercer lugar, es de una naturaleza que purga o limpia.
+[.discourse-part]
+__En tercer lugar, es de una naturaleza que purga o limpia.__
 Ella es de la naturaleza del fuego, de la naturaleza del agua,
 internamente y espiritualmente.
 Esta Semilla es Espíritu y vida en una medida,
@@ -351,7 +385,8 @@ y disfrutada en el temor santo del Señor,
 prevalece sobre la semilla contraria y arroja sus tinieblas,
 y purga y quema su inmundicia, paja y corrupción.
 
-En cuarto lugar, es de una naturaleza que sazona, leuda y santifica.
+[.discourse-part]
+__En cuarto lugar, es de una naturaleza que sazona, leuda y santifica.__
 Es como sal; es como levadura.
 Ella sazona y leuda con vida.
 Ella sazona y leuda con justicia.
@@ -363,7 +398,8 @@ continuará leudando cada vez más con la naturaleza de verdad,
 a semejanza del Dios de verdad.
 Ver Marcos 9:50; Lucas 13:21; Colosenses 4:6
 
-En quinto lugar, es de una naturaleza que enriquece.
+[.discourse-part]
+__En quinto lugar, es de una naturaleza que enriquece.__
 Es un tesoro escondido o perla de gran precio.
 Hace al comerciante sabio muy rico,
 a ese que lo vende todo por Ella y compra el campo con Ella.
@@ -372,25 +408,28 @@ sino que se rinde a ella y la hace su tesoro,
 ¡cuánto enriquece Esta su corazón con lo que es santo y
 celestial! ¡Cuán rico lo hace tocante a Dios! (Mateo 13:44-46)
 
-En sexto lugar, es de una naturaleza que se incrementa y crece.
+[.discourse-part]
+__En sexto lugar, es de una naturaleza que se incrementa y crece.__
 Un único talento puede ser incrementado.
 La pequeña Semilla, como la semilla de un grano de mostaza,
 crecerá en la buena tierra más allá de las hierbas, y se convertirá en un árbol,
 árbol de justicia de la plantación del Señor, para que Él pueda ser glorificado.
 (Mateo 13:31-32; 25:16; 13:23)
 
-III.
-¿Cuáles son los efectos de esta Semilla?
+[.alt]
+==== III. ¿Cuáles son los efectos de esta Semilla?
 
+[.discourse-part]
 Respuesta: Los efectos de la Semilla pura en el corazón son muchísimos, muy grandes,
 muy dulces, preciosos y benditos,
 los cuales llegan a experimentar todos aquellos que
 experimentan el crecimiento y propagación de Ella.
 Mencionaré sólo algunos.
 
-Primero,
+[.discourse-part]
+__Primero,
 es una verdadera unión y comunión con el Dios y Padre de nuestro Señor Jesucristo,
-el Padre de esta Semilla, y con todos los que están unidos a Ella.
+el Padre de esta Semilla, y con todos los que están unidos a Ella.__
 La unión y comunión con Dios están en esta Semilla, nunca fuera de Ella.
 Porque en la simiente de la serpiente, el hombre está separado de Dios,
 ajeno a Su vida y no puede acercarse a Él, ni tener comunión con Él. Por tanto,
@@ -401,8 +440,9 @@ pueden imaginar una unión y comunión con Dios fuera de Ella,
 pero ninguno puede unirse a Dios o tener comunión con Él verdaderamente,
 excepto en el don, en la gracia, en la luz, en el Espíritu que es de Dios.
 
-Segundo, esta Semilla se siente brotar en el corazón, y cuando se une a Ella,
-derriba y somete todo lo que es contrario a Dios.
+[.discourse-part]
+__Segundo, esta Semilla se siente brotar en el corazón, y cuando se une a Ella,
+derriba y somete todo lo que es contrario a Dios.__
 Este honor y poder los ha dado Dios a la Simiente
 de la mujer (aún en la menor medida de Esta):
 Que Ella herirá la cabeza de la serpiente y liberará
@@ -420,9 +460,10 @@ lo vencerá. Así, pues, el pecado es derribado y la tentación mantenida fuera,
 por medio de la virtud y poder de la vida y autoridad
 del Salvador que brotan en esta Semilla de Dios.
 
-Tercero,
+[.discourse-part]
+__Tercero,
 a medida que brota y a medida que sus operaciones son experimentadas y recibidas,
-lleva a la imagen y naturaleza de Dios.
+lleva a la imagen y naturaleza de Dios.__
 Ella borra la imagen del diablo en la mente y renueva a semejanza de Dios y Cristo.
 Sí,
 aquí tenemos la mente misma de Cristo y somos hechos uno
@@ -435,9 +476,10 @@ Y cualquiera que desee experimentar el verdadero desvestirse del viejo hombre,
 y el vestirse del nuevo hombre (el cual es creado en la justicia y santidad de la verdad),
 debe experimentarlo en esta Semilla.
 
-Cuarto, la Semilla lleva la mente, el corazón, el alma,
+[.discourse-part]
+__Cuarto, la Semilla lleva la mente, el corazón, el alma,
 el espíritu a la nueva obediencia (a Su propia naturaleza obediente), o sea,
-a hacer la voluntad de Dios con gran deleite y placer.
+a hacer la voluntad de Dios con gran deleite y placer.__
 "`El hacer tu voluntad, Dios mío, me ha agradado,`" dijo Cristo.
 Esta Semilla es de Su naturaleza.
 Es una medida, una porción, un talento celestial de Su gracia y verdad,
@@ -457,9 +499,10 @@ y al levantarse y prevalecer la naturaleza de la Semilla,
 que hacer la voluntad de su Padre celestial,
 y descubrir el corazón del Padre complacido con el hijo?
 
-Quinto, Ella lleva al entendimiento, sentido y deleite de todas las preciosas promesas,
+[.discourse-part]
+__Quinto, Ella lleva al entendimiento, sentido y deleite de todas las preciosas promesas,
 y a todas las bendiciones espirituales en Cristo Jesús nuestro
-Señor. Todas las promesas son para la Semilla,
+Señor.__ Todas las promesas son para la Semilla,
 y son sí y amén en Cristo, y la más pequeña medida de Su vida participa de esto.
 La Semilla, la Semilla eterna es la heredera,
 y nosotros los que estamos unidos a la Semilla,
@@ -491,7 +534,7 @@ y que permanece en Él en esta Semilla.
 Dicha alma será guardada por el poder de Dios,
 a través de la fe que brota de esta Semilla, para perfecta redención y salvación. Amén.
 
-Breve Aclaración con Respecto a la Imputación de la Justicia de Cristo
+=== Breve Aclaración con Respecto a la Imputación de la Justicia de Cristo
 
 Dios visita a los hombres por medio de la luz y poder
 de Su Santo Espíritu en su estado muerto y oscuro,
@@ -580,12 +623,14 @@ Pero quienquiera que profesa el cristianismo, y sin embargo, no está aquí,
 no está a salvo, pues el enemigo tiene maneras de hechizarlo y engañarlo,
 y el tal no puede resistirlo y evitarlo de manera eficaz.
 
-Una Breve Pregunta Acerca de la Correcta Lectura de las Escrituras
+=== Una Breve Pregunta Acerca de la Correcta Lectura de las Escrituras
 
+[.discourse-part]
 Pregunta:
 ¿Cuál es la lectura correcta de las Escrituras para que
 sea de beneficio y provecho para el alma del lector?
 
+[.discourse-part]
 Respuesta: El que lee las Escrituras en una verdadera medida de vida recibida de Dios,
 las lee correctamente, y cada vez que las lee así, es para su beneficio.
 El que lee fuera de esa medida de vida, lee para su propio daño,
